<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.staresmiles.amracodes.amitproject.fragments.RegisterFragment">


    <EditText
        android:id="@+id/name_editText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/user_name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_name_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_username_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/mobile_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mobile_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_mobile_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/city_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/city_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corner_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_city_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/str_register_txt"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
