<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:layout_marginTop="80dp"
        android:orientation="vertical">


        <ScrollView
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/user_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/name_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:singleLine="true"
                    android:text="Mohamed Sayed"
                    android:textColor="@android:color/black"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/about_us_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/about_us_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/about" />

                    <TextView
                        android:id="@+id/about_us_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:lines="1"
                        android:text="@string/str_side_menu_about_us_txt"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/our_services_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/change_language_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/lang" />

                    <TextView
                        android:id="@+id/our_services_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:text="@string/str_side_menu_change_language_txt"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/know_your_doctor_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/know_your_doctor_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@mipmap/logout" />

                    <TextView
                        android:id="@+id/know_your_doctor_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:lines="1"
                        android:text="@string/str_side_menu_logout_txt"
                        android:textColor="@android:color/black"
                        />

                </LinearLayout>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
